# grassroots-vm

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
build-config/: build.mk  build_debug.mk  build_exe.mk  help.mk  system_guard_clauses.mk  target.mk
core-libs/std/: Makefile  strings.h
core-libs/tests/: test_runner.c  testing.h
core/std/: CMakeLists.txt  cli.c  cli.h  error.c  error.h  file.c  file.h  io.c  io.h  memory.c  memory.h  strings.c  strings.h  types.h
core/tests/: CMakeLists.txt  test_runner.c  testing.h
docs/: ga_filespec.md  gbc_filespec.md  gvm_spec.md
docs/test/prebuilt/: README.md  add_two.gbc.txt  hello_world.gbc.txt
ext/: gbc.hexpat  testing.h
gsm/: CMakeLists.txt  assembler.c  assembler.h  gbc_constants.h  main.c
gvm/: CMakeLists.txt  LICENSE  seed.c  seed.h
gvm/build-config/: build.mk  build_exe.mk  help.mk  target.mk
gvm/ext/: testing.h
gvm/src/: main.c
gvm/src/std/: array.c  array.h  cli.c  cli.h  memory.c  memory.h  strings.c  strings.h  test_runner.c
gvm/tests/: hello_word.gobj  sample_test.c
src/: main.c
test/: README.md  add_two_clean.ga
test/prebuilt/: add_two.gbc  hello_world.gbc
